[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "madx-ptc-utils"
version = "0.1.1"
description = "Uses MAD-X PTC to convert a MAD-X lattice to a Python object"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [{ name = "Kelly Anderson", email = "kjanderson24@proton.me" }]
dependencies = ["cpymad", "numpy"]
keywords = ["MAD-X", "PTC", "madx", "particle tracking"]
# license = { file = "LICENSE" }
# TODO Add example files

[project.scripts]
create-ptc-files = "madx_ptc_utils.create_ptc_files:main"
rm-keyword = "madx_ptc_utils.rm_keyword:main"

[project.urls]
"Bug Tracker" = "https://github.com/anderske-msu/madx-ptc-utils/issues"
Homepage = "https://github.com/anderske-msu/madx-ptc-utils"
